fix(ProxyService): update image retrieval to download bytes and handle exceptions